增加樱花动画

--- a/package.json
+++ b/package.json
@@ -138,7 +138,12 @@
         {
           "loose": true
         }
-      ]
+      ],
+      ["import", {
+        "libraryName": "antd",
+        "libraryDirectory": "es",
+        "style": true
+      }]
     ]
   }
 }
