--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-react-app": "^7.0.0",
     "babel-preset-stage-2": "^6.24.1",
+    "better-scroll": "^1.15.0",
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
@@ -82,15 +83,15 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "commit":"git add . && git commit -m'push' && git push",
-    "push":"yarn commit && yarn build && ssh ubuntu@132.232.3.185 rm -rf /home/ubuntu/github/zhuishushenqi/build && scp -r ./build/ ubuntu@132.232.3.185:/home/ubuntu/github/zhuishushenqi/"
+    "commit": "git add . && git commit -m'push' && git push",
+    "push": "yarn commit && yarn build && ssh ubuntu@132.232.3.185 rm -rf /home/ubuntu/github/zhuishushenqi/build && scp -r ./build/ ubuntu@132.232.3.185:/home/ubuntu/github/zhuishushenqi/"
   },
   "eslintConfig": {
     "extends": "react-app",
     "rules": {
       "no-extend-native": 0,
       "eqeqeq": 0,
-      "jsx-a11y/iframe-has-title":0
+      "jsx-a11y/iframe-has-title": 0
     }
   },
   "browserslist": [
